# rinha-copy-rust

./: .env  Cargo.toml  Dockerfile  docker-compose-dev.yml  docker-compose.yml  nginx.conf
.sqlx/: query-3ce200a7d9197420c936b8ae4a9aceec2abc5e6843f68cea53bc462e210bcd81.json
db/: v0001__create_people.sql
src/: main.rs  persistence.rs
